apps/app-proxy/overlays/codefresh3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: codefresh3-cap-app-proxy
  namespace: codefresh3
spec:
  ingressClassName: nginx
  rules:
  - host: ad4ec52f861704f18870692abd3beae5-2c2f77ca107721a8.elb.us-west-2.amazonaws.com
    http:
      paths:
      - backend:
          service:
            name: cap-app-proxy
            port:
              number: 3017
        path: /app-proxy/
        pathType: Prefix
status:
  loadBalancer: {}
